fix: fix fetch api
